cmake_minimum_required(VERSION 3.10 FATAL_ERROR)
project(sacryst LANGUAGES C CXX)
include_directories(./ include)

set(sacryst_SRCS 
  main.cpp
  cParameters.cpp
)

option(BENCHMARK_TEST "Build the test suite." OFF)
option(STATISTICS_EXIT "Statistics file exit." OFF)
option(SCREEN_EXIT "Print intermediate exits." OFF)

add_executable(sacryst ${sacryst_SRCS})
if(SCREEN_EXIT)
	target_compile_definitions(sacryst PRIVATE PRINT_INTERMEDIATE_RESULTS)
endif()
if(STATISTICS_EXIT)
	target_compile_definitions(sacryst PRIVATE WRITE_STATISTICS)
endif()
target_compile_definitions(sacryst PRIVATE CUSTOM_ENERGY)


if(BENCHMARK_TEST)
	add_executable(sacryst_ackley ${sacryst_SRCS} energies/ackley_energy.cpp)
	if(SCREEN_EXIT)
		target_compile_definitions(sacryst_ackley PRIVATE PRINT_INTERMEDIATE_RESULTS)
	endif()
	if(STATISTICS_EXIT)
		target_compile_definitions(sacryst_ackley PRIVATE WRITE_STATISTICS)
	endif()
endif()

if(BENCHMARK_TEST)
	add_executable(sacryst_griewangk ${sacryst_SRCS} energies/griewangk_energy.cpp)
	if(SCREEN_EXIT)
		target_compile_definitions(sacryst_griewangk PRIVATE PRINT_INTERMEDIATE_RESULTS)
	endif()
	if(STATISTICS_EXIT)
		target_compile_definitions(sacryst_griewangk PRIVATE WRITE_STATISTICS)
	endif()
endif()

if(BENCHMARK_TEST)
	add_executable(sacryst_rastrigin ${sacryst_SRCS} energies/rastrigin_energy.cpp)
	if(SCREEN_EXIT)
		target_compile_definitions(sacryst_rastrigin PRIVATE PRINT_INTERMEDIATE_RESULTS)
	endif()
	if(STATISTICS_EXIT)
		target_compile_definitions(sacryst_rastrigin PRIVATE WRITE_STATISTICS)
	endif()
endif()

if(BENCHMARK_TEST)
	add_executable(sacryst_rosenbrock ${sacryst_SRCS} energies/rosenbrock_energy.cpp)
	if(SCREEN_EXIT)
		target_compile_definitions(sacryst_rosenbrock PRIVATE PRINT_INTERMEDIATE_RESULTS)
	endif()
	if(STATISTICS_EXIT)
		target_compile_definitions(sacryst_rosenbrock PRIVATE WRITE_STATISTICS)
	endif()
endif()

if(BENCHMARK_TEST)
	add_executable(sacryst_sphere ${sacryst_SRCS} energies/sphere_energy.cpp)
	if(SCREEN_EXIT)
		target_compile_definitions(sacryst_sphere PRIVATE PRINT_INTERMEDIATE_RESULTS)
	endif()
	if(STATISTICS_EXIT)
		target_compile_definitions(sacryst_sphere PRIVATE WRITE_STATISTICS)
	endif()
endif()

if(BENCHMARK_TEST)
	add_executable(sacryst_weierstrass ${sacryst_SRCS} energies/weierstrass_energy.cpp)
	if(SCREEN_EXIT)
		target_compile_definitions(sacryst_weierstrass PRIVATE PRINT_INTERMEDIATE_RESULTS)
	endif()
	if(STATISTICS_EXIT)
		target_compile_definitions(sacryst_weierstrass PRIVATE WRITE_STATISTICS)
	endif()
endif()

if(BENCHMARK_TEST)
	add_executable(sacryst_zakharov ${sacryst_SRCS} energies/zakharov_energy.cpp)
	if(SCREEN_EXIT)
		target_compile_definitions(sacryst_zakharov PRIVATE PRINT_INTERMEDIATE_RESULTS)
	endif()
	if(STATISTICS_EXIT)
		target_compile_definitions(sacryst_zakharov PRIVATE WRITE_STATISTICS)
	endif()
endif()
